# nmpde-QiaoTramacereWang

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: IOUtils.hpp  Wave.hpp
include/wave_solver/: CGWaveSolver.hpp  CGWaveSolver2D.hpp  VTKOutput.hpp
mesh/: mesh-square-h0.012500.msh.opt  mesh-square-h0.012500_v2.msh
results/convergence/: space_convergence.csv  time_convergence.csv
results/dispersion/: dispersion_spatial.csv  dispersion_summary.csv
results/dispersion/modal/: modal_m1_n1_dt0p025_T10.csv  modal_m1_n1_dt0p05_T10.csv  modal_m1_n1_dt0p1_T10.csv  modal_m1_n1_dt0p2_T10.csv  modal_m2_n2_dt0p025_T10.csv  modal_m2_n2_dt0p05_T10.csv  modal_m2_n2_dt0p1_T10.csv  modal_m2_n2_dt0p2_T10.csv  modal_m4_n4_dt0p025_T10.csv  modal_m4_n4_dt0p05_T10.csv  modal_m4_n4_dt0p1_T10.csv  modal_m4_n4_dt0p2_T10.csv  modal_spatial_m1_n1_N16_dt0p001_T10.csv  modal_spatial_m1_n1_N8_dt0p001_T10.csv  modal_spatial_m2_n2_N16_dt0p01_T10.csv  modal_spatial_m2_n2_N32_dt0p01_T10.csv  modal_spatial_m2_n2_N4_dt0p01_T10.csv  modal_spatial_m2_n2_N64_dt0p01_T10.csv  modal_spatial_m2_n2_N8_dt0p01_T10.csv  modal_spatial_m4_n4_N16_dt0p01_T10.csv  modal_spatial_m4_n4_N32_dt0p01_T10.csv  modal_spatial_m4_n4_N64_dt0p01_T10.csv  modal_spatial_m4_n4_N8_dt0p01_T10.csv
results/dissipation/: dissipation_summary.csv
results/dissipation/energy/: energy_m1_n1_th0p5_dt0p025_T10.csv  energy_m1_n1_th0p5_dt0p05_T10.csv  energy_m1_n1_th0p5_dt0p1_T10.csv  energy_m1_n1_th0p75_dt0p025_T10.csv  energy_m1_n1_th0p75_dt0p05_T10.csv  energy_m1_n1_th0p75_dt0p1_T10.csv  energy_m1_n1_th1_dt0p025_T10.csv  energy_m1_n1_th1_dt0p05_T10.csv  energy_m1_n1_th1_dt0p1_T10.csv  energy_m2_n2_th0p5_dt0p025_T10.csv  energy_m2_n2_th0p5_dt0p05_T10.csv  energy_m2_n2_th0p5_dt0p1_T10.csv  energy_m2_n2_th0p75_dt0p025_T10.csv  energy_m2_n2_th0p75_dt0p05_T10.csv  energy_m2_n2_th0p75_dt0p1_T10.csv  energy_m2_n2_th1_dt0p025_T10.csv  energy_m2_n2_th1_dt0p05_T10.csv  energy_m2_n2_th1_dt0p1_T10.csv  energy_m4_n4_th0p5_dt0p025_T10.csv  energy_m4_n4_th0p5_dt0p05_T10.csv  energy_m4_n4_th0p5_dt0p1_T10.csv  energy_m4_n4_th0p75_dt0p025_T10.csv  energy_m4_n4_th0p75_dt0p05_T10.csv  energy_m4_n4_th0p75_dt0p1_T10.csv  energy_m4_n4_th1_dt0p025_T10.csv  energy_m4_n4_th1_dt0p05_T10.csv  energy_m4_n4_th1_dt0p1_T10.csv
scripts/: derive_manufactured_solution_2d.py  plot_dispersion_spatial.py  plot_dispersion_time.py  plot_dissipation.py  plot_strong_scaling.py  plot_weak_scaling.py
src/: DispersionOmegaDtStudy.cpp  DispersionSpatialStudy.cpp  DissipationStudy.cpp  Main.cpp  SpaceConvergence.cpp  TimeConvergence.cpp  Wave.cpp  lab-09.cpp
src/OtherImplementation/: CMakeLists.txt
src/OtherImplementation/src/: DissipationStudy.cpp  Main.cpp  SpaceConvergence.cpp  TimeConvergence.cpp  Wave.cpp  Wave.hpp  generate_square_meshes_by_N.py
src/apps/: test_convergence_space.cpp  test_convergence_space_2d.cpp  test_convergence_spacetime.cpp  test_convergence_spacetime_2d.cpp  test_convergence_time.cpp  test_convergence_time_2d.cpp  test_mms_2d.cpp  wave_2d_parallel.cpp
src/cg/: CGWaveSolver.cpp  CGWaveSolver2D.cpp  CGWaveSolver2DParallel.cpp
src/core/Meshes/: generate_2D_meshes.py
src/core/Problems/: Gaussian2DPulse.cpp  ManufacturedSolution2D.cpp
src/core/Utilities/: VTKOutput.cpp
src_hyper/: Hyperbolic.cpp  Hyperbolic.hpp  main.cpp
src_stokes/: Stokes.cpp  Stokes.hpp
src_stokes_si_td/: stokes-time.cpp  stokes-time.hpp
src_stokes_td/: stokes-time.cpp  stokes-time.hpp
